# Carvera-Spindle-Controller

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  firmware.uf2  memory.x
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
docs/: CARVERA_CONFIG.md  CONFIGURATION.md  calibration_procedure.gcode  carvera_calibration_analysis.md  clear_calibration.gcode  dump_calibration.gcode  escon_calculation_validation.md  slew_rate_validation.md
docs/escon_generated/: generate_all.py
src/: adc.rs  conversion.rs  display.rs  filters.rs  flash_store.rs  lib.rs  main.rs  speed.rs  stabilization.rs  stall.rs  state.rs  temperature.rs  threshold.rs
src/calibration/: mod.rs  recorder.rs  sequence.rs  table.rs
src/lcd/: driver.rs  format.rs  mod.rs
src/tasks/: calibration.rs  current_monitor.rs  lcd.rs  led.rs  mod.rs  pwm_input.rs  speed_measure.rs  spindle_control.rs  thermal.rs  watchdog.rs
